# hand_gesture_detector

./: .gitignore  README.md  handtrackermodule.py  main.py  model.py  pyproject.toml  requirements.txt  train.ipynb  train.py
