[project]
name = "hand-expression"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "matplotlib>=3.10.8",
    "mediapipe==0.10.13",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
